--- a/knn_classification_tutorial.ipynb
+++ b/knn_classification_tutorial.ipynb
@@ -1129,10 +1129,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    %"**Do not forget to work on exercise, exercise link is below** \n",
-    %"\n",
-    %"https://github.com/codebasics/py/blob/master/ML/17_knn_classification/knn_exercise.md\n"
-   ]
+    "**Good Luck** \n",
+    ]
   }
  ],
  "metadata": {
